Update Lotka-Volterra notebook to use make_cached and joblib-based parallelisation

--- a/code/notebooks/lotka_volterra/Sensitivity_analysis.ipynb
+++ b/code/notebooks/lotka_volterra/Sensitivity_analysis.ipynb
@@ -99,14 +99,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5e4c8696-5fe5-40eb-9445-6b1a48ee8e96",
-   "metadata": {},
-   "source": [
-    "We create a Dask client in order to parallelise calculations where possible:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e68f9855-b10a-408c-ba94-740e184b48cb",
@@ -135,7 +127,7 @@
    "source": [
     "@cached(item_type=np.ndarray, batch_size=lotka_volterra.n_chains, read_only=True)\n",
     "def rw_samples() -> list[np.ndarray]:\n",
-    "    raise NotImplemented"
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -147,7 +139,7 @@
    "source": [
     "@cached(item_type=np.ndarray, batch_size=lotka_volterra.n_chains, read_only=True)\n",
     "def hmc_samples() -> list[np.ndarray]:\n",
-    "    raise NotImplemented"
+    "    raise NotImplementedError"
    ]
   },
   {
