--- a/code/notebooks/lotka_volterra/Stein_thinning.ipynb
+++ b/code/notebooks/lotka_volterra/Stein_thinning.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "@cached(item_type=np.ndarray, batch_size=lotka_volterra.n_chains, read_only=True)\n",
     "def rw_samples() -> list[np.ndarray]:\n",
-    "    raise NotImplemented"
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "source": [
     "@cached(item_type=np.ndarray, batch_size=lotka_volterra.n_chains, read_only=True)\n",
     "def hmc_samples() -> list[np.ndarray]:\n",
-    "    raise NotImplemented"
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "source": [
     "@cached(batch_size=lotka_volterra.n_chains, read_only=True)\n",
     "def rw_grads(i: int) -> np.ndarray:\n",
-    "    raise NotImplemented"
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "source": [
     "@cached(batch_size=lotka_volterra.n_chains, read_only=True)\n",
     "def hmc_grads(i: int) -> np.ndarray:\n",
-    "    raise NotImplemented"
+    "    raise NotImplementedError"
    ]
   },
   {
