Use S3 for caching in Lotka-Volterra notebooks

--- a/code/notebooks/lotka_volterra/Gradient_free.ipynb
+++ b/code/notebooks/lotka_volterra/Gradient_free.ipynb
@@ -38,9 +38,9 @@
     "import lotka_volterra\n",
     "from thinning import gaussian_thin, laplace_approximation\n",
     "import utils.caching\n",
-    "from utils.caching import make_cached\n",
+    "from utils.caching import make_cached_s3\n",
     "from utils.parallel import get_map_parallel_joblib, parallelise_for_unique\n",
-    "from utils.paths import GENERATED_DATA_PATH\n",
+    "from utils.paths import S3_BUCKET_NAME\n",
     "from utils.plotting import highlight_points"
    ]
   },
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "cached = make_cached(GENERATED_DATA_PATH)"
+    "cached = make_cached_s3(S3_BUCKET_NAME)"
    ]
   },
   {
@@ -170,15 +170,15 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_4.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_4.npy\n"
      ]
     }
    ],
@@ -277,15 +277,15 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_0.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_0.npy\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 436 ms, sys: 8.11 ms, total: 444 ms\n",
-      "Wall time: 440 ms\n"
+      "CPU times: user 383 ms, sys: 35.2 ms, total: 418 ms\n",
+      "Wall time: 698 ms\n"
      ]
     }
    ],
@@ -364,8 +364,8 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_0.npy\n",
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_0.npy\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:127: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
       "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n"
      ]
     },
@@ -465,7 +465,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(-14795.338558476658)"
+       "np.float64(-14795.338558498564)"
       ]
      },
      "execution_count": 22,
@@ -607,8 +607,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.5 s, sys: 8.36 ms, total: 2.51 s\n",
-      "Wall time: 2.61 s\n"
+      "CPU times: user 2.4 s, sys: 12 ms, total: 2.41 s\n",
+      "Wall time: 2.55 s\n"
      ]
     },
     {
@@ -781,7 +781,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:127: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
       "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n"
      ]
     },
@@ -851,7 +851,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(12428.965173848912)"
+       "np.float64(12428.9651738708)"
       ]
      },
      "execution_count": 36,
@@ -893,8 +893,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 59 ms, sys: 56.9 ms, total: 116 ms\n",
-      "Wall time: 2.25 s\n"
+      "CPU times: user 60.1 ms, sys: 76.2 ms, total: 136 ms\n",
+      "Wall time: 3.62 s\n"
      ]
     }
    ],
@@ -922,7 +922,7 @@
     {
      "data": {
       "text/plain": [
-       "26.021047830581665"
+       "54.72193121910095"
       ]
      },
      "execution_count": 39,
