--- a/code/notebooks/lotka_volterra/Gradient_free_burn_in_removal.ipynb
+++ b/code/notebooks/lotka_volterra/Gradient_free_burn_in_removal.ipynb
@@ -38,9 +38,9 @@
     "import lotka_volterra\n",
     "from thinning import gaussian_thin, laplace_approximation\n",
     "import utils.caching\n",
-    "from utils.caching import make_cached\n",
+    "from utils.caching import make_cached_s3\n",
     "from utils.parallel import get_map_parallel_joblib\n",
-    "from utils.paths import GENERATED_DATA_PATH\n",
+    "from utils.paths import S3_BUCKET_NAME\n",
     "from utils.plotting import highlight_points"
    ]
   },
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "cached = make_cached(GENERATED_DATA_PATH)"
+    "cached = make_cached_s3(S3_BUCKET_NAME)"
    ]
   },
   {
@@ -194,9 +194,9 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_0.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_0.npy\n"
      ]
     },
     {
@@ -367,8 +367,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 317 ms, sys: 61 μs, total: 317 ms\n",
-      "Wall time: 326 ms\n"
+      "CPU times: user 319 ms, sys: 85 μs, total: 319 ms\n",
+      "Wall time: 333 ms\n"
      ]
     }
    ],
@@ -413,7 +413,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(844.9508392810932)"
+       "np.float64(844.9508392811421)"
       ]
      },
      "execution_count": 18,
@@ -664,7 +664,7 @@
     {
      "data": {
       "text/plain": [
-       "14.394981622695923"
+       "12.403993368148804"
       ]
      },
      "execution_count": 28,
