--- a/code/notebooks/lotka_volterra/Gradient_free_elliptic_distributions.ipynb
+++ b/code/notebooks/lotka_volterra/Gradient_free_elliptic_distributions.ipynb
@@ -41,9 +41,9 @@
     "import lotka_volterra\n",
     "from thinning import gaussian_thin, laplace_approximation\n",
     "import utils.caching\n",
-    "from utils.caching import make_cached\n",
+    "from utils.caching import make_cached_s3\n",
     "from utils.parallel import get_map_parallel_joblib\n",
-    "from utils.paths import GENERATED_DATA_PATH\n",
+    "from utils.paths import S3_BUCKET_NAME\n",
     "from utils.plotting import centered_subplots, highlight_points, plot_paths, plot_sample_thinned, plot_traces"
    ]
   },
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "cached = make_cached(GENERATED_DATA_PATH)"
+    "cached = make_cached_s3(S3_BUCKET_NAME)"
    ]
   },
   {
@@ -223,15 +223,15 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_4.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_4.npy\n"
      ]
     }
    ],
@@ -290,9 +290,9 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_0.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_0.npy\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(2.2196883568050785)"
+       "np.float64(2.2196883567958863)"
       ]
      },
      "execution_count": 24,
@@ -598,21 +598,21 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_4.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_4.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_4.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_4.npy\n"
      ]
     },
     {
@@ -652,7 +652,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:127: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
       "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n"
      ]
     },
@@ -703,8 +703,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 62.6 ms, sys: 94.4 ms, total: 157 ms\n",
-      "Wall time: 3.1 s\n"
+      "CPU times: user 43.6 ms, sys: 88.7 ms, total: 132 ms\n",
+      "Wall time: 2.73 s\n"
      ]
     }
    ],
@@ -732,7 +732,7 @@
     {
      "data": {
       "text/plain": [
-       "259.8424985408783"
+       "254.16041684150696"
       ]
      },
      "execution_count": 35,
