--- a/code/notebooks/lotka_volterra/Naive_thinning.ipynb
+++ b/code/notebooks/lotka_volterra/Naive_thinning.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "import lotka_volterra\n",
     "import utils.caching\n",
-    "from utils.caching import make_cached\n",
-    "from utils.paths import FIGURES_PATH, GENERATED_DATA_PATH\n",
+    "from utils.caching import make_cached_s3\n",
+    "from utils.paths import FIGURES_PATH, S3_BUCKET_NAME\n",
     "from utils.plotting import plot_sample_thinned"
    ]
   },
@@ -69,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "cached = make_cached(GENERATED_DATA_PATH)"
+    "cached = make_cached_s3(S3_BUCKET_NAME)"
    ]
   },
   {
@@ -89,9 +89,9 @@
    },
    "outputs": [],
    "source": [
-    "@cached(item_type=np.ndarray, batch_size=lotka_volterra.n_chains, read_only=True)\n",
-    "def rw_samples() -> list[np.ndarray]:\n",
-    "    raise NotImplemented"
+    "@cached(batch_size=lotka_volterra.n_chains, read_only=True)\n",
+    "def rw_samples(i: int) -> np.ndarray:\n",
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -103,9 +103,9 @@
    },
    "outputs": [],
    "source": [
-    "@cached(item_type=np.ndarray, batch_size=lotka_volterra.n_chains, read_only=True)\n",
-    "def hmc_samples() -> list[np.ndarray]:\n",
-    "    raise NotImplemented"
+    "@cached(batch_size=lotka_volterra.n_chains, read_only=True)\n",
+    "def hmc_samples(i: int) -> np.ndarray:\n",
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -191,25 +191,25 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_naive_idx_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_naive_idx_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_naive_idx_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_naive_idx_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_naive_idx_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_naive_idx_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_naive_idx_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_naive_idx_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_naive_idx_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_naive_idx_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_naive_idx_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_naive_idx_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_4.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_4.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: rw_naive_idx_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_naive_idx_4.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_naive_idx_4.npy\n"
      ]
     },
     {
@@ -248,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "18.238152742385864"
+       "22.01822853088379"
       ]
      },
      "execution_count": 13,
