--- a/code/notebooks/lotka_volterra/Gradient_free_Student_t.ipynb
+++ b/code/notebooks/lotka_volterra/Gradient_free_Student_t.ipynb
@@ -39,9 +39,9 @@
     "\n",
     "import lotka_volterra\n",
     "import utils.caching\n",
-    "from utils.caching import make_cached\n",
+    "from utils.caching import make_cached_s3\n",
     "from utils.parallel import get_map_parallel_joblib, parallelise_for_unique\n",
-    "from utils.paths import GENERATED_DATA_PATH\n",
+    "from utils.paths import S3_BUCKET_NAME\n",
     "from utils.plotting import highlight_points"
    ]
   },
@@ -80,7 +80,7 @@
    },
    "outputs": [],
    "source": [
-    "cached = make_cached(GENERATED_DATA_PATH)"
+    "cached = make_cached_s3(S3_BUCKET_NAME)"
    ]
   },
   {
@@ -213,15 +213,15 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_0.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_0.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_1\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_1.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_1.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_2\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_2.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_2.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_3\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_3.npy\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_3.npy\n",
       "DEBUG:utils.caching:Reading from disk cache: validation_hmc_samples_4\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/validation_hmc_samples_4.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/validation_hmc_samples_4.npy\n"
      ]
     }
    ],
@@ -437,8 +437,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 46.5 ms, sys: 75 ms, total: 122 ms\n",
-      "Wall time: 2.09 s\n"
+      "CPU times: user 67.4 ms, sys: 64.3 ms, total: 132 ms\n",
+      "Wall time: 2.93 s\n"
      ]
     }
    ],
@@ -460,15 +460,15 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_samples_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_samples_0.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_samples_0.npy\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 13min 55s, sys: 58.2 s, total: 14min 54s\n",
-      "Wall time: 3min 47s\n"
+      "CPU times: user 14min 7s, sys: 58.6 s, total: 15min 5s\n",
+      "Wall time: 3min 51s\n"
      ]
     },
     {
@@ -605,8 +605,8 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_log_p_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_log_p_0.npy\n",
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_log_p_0.npy\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.10/site-packages/stein_thinning/thinning.py:127: UserWarning: log_q differs from log_p by more than 10 - consider using q that matches target better\n",
       "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using q that matches target better')\n"
      ]
     },
@@ -650,7 +650,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(15570.621323719202)"
+       "np.float64(15570.621323741327)"
       ]
      },
      "execution_count": 27,
@@ -921,7 +921,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(15622.255019308805)"
+       "np.float64(15622.255019330725)"
       ]
      },
      "execution_count": 38,
@@ -959,13 +959,13 @@
      "output_type": "stream",
      "text": [
       "DEBUG:utils.caching:Reading from disk cache: rw_thinned_idx_0\n",
-      "DEBUG:utils.caching:Reading /home/ec2-user/SageMaker/gradient-free-mcmc-postprocessing/data/generated/rw_thinned_idx_0.npy\n"
+      "DEBUG:utils.caching:Reading gradient-free-mcmc-postprocessing/rw_thinned_idx_0.npy\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.float64(0.10820419160264824)"
+       "np.float64(0.10837416731318722)"
       ]
      },
      "execution_count": 40,
@@ -988,7 +988,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(0.09470119350105072)"
+       "np.float64(0.09488942311259109)"
       ]
      },
      "execution_count": 41,
@@ -1098,7 +1098,7 @@
     {
      "data": {
       "text/plain": [
-       "276.86575841903687"
+       "284.2349534034729"
       ]
      },
      "execution_count": 47,
